# Personal-Job-Application-Tracker

./: .gitignore  database.py  main.py  pyproject.toml
job_tracker_frontend/: package.json  tsconfig.json
job_tracker_frontend/src/: App.jsx  App.tsx  JobApplicationEdit.jsx  JobApplicationForm.jsx  JobApplicationList.jsx  JobApplicationPosting.jsx  index.html  main.jsx
